Allow to publish artifact package via API or composer push plugin
