# src/Controller/PushPackagesController.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 namespace Packeton\Controller;
 
+use Packeton\Exception\ValidationException;
 use Packeton\Form\Handler\PushPackageHandler;
 use Packeton\Form\Type\Push\NexusPushType;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
@@ -17,13 +18,18 @@ use Symfony\Component\Security\Http\Attribute\IsGranted;
 #[Route(defaults: ['_format' => 'json'])]
 class PushPackagesController extends AbstractController
 {
-    #[Route('/packages/upload/{name}/{version}', name: 'package_push_nexus', requirements: ['name' => '%package_name_regex%'], methods: ['PUT', 'POST'])]
     #[IsGranted('ROLE_MAINTAINER')]
+    #[Route('/packages/upload/{name}/{version}', name: 'package_push_nexus', requirements: ['name' => '%package_name_regex%'], methods: ['PUT', 'POST'])]
+    #[Route('/api/packages/upload/{name}/{version}', name: 'package_push_api', requirements: ['name' => '%package_name_regex%'], methods: ['PUT'])]
     public function pushNexusAction(PushPackageHandler $handler, Request $request, string $name, string $version): Response
     {
         $form = $this->createApiForm(NexusPushType::class, options: ['method' => $request->getMethod()]);
 
-        $handler($form, $request, $name, $version);
+        try {
+            $handler($form, $request, $name, $version, $this->getUser());
+        } catch (ValidationException $e) {
+            return new JsonResponse(['title' => $e->getMessage(), 'errors' => $e->getFormErrors()], 400);
+        }
 
         return new JsonResponse([], 201);
     }
